@@ -154,6 +154,29 @@ bool CFilePositionList::AddEntry(LPCTSTR lpszFileName)
     return true;
 }
 
+bool CFilePositionList::RemoveEntry(LPCTSTR lpszFileName)
+{
+    // Look for the file position
+    POSITION pos = GetHeadPosition();
+    while (pos) {
+        FILE_POSITION& filePosition = GetAt(pos);
+
+        // If we find it, we can remove it
+        if (filePosition.strFile == lpszFileName) {
+            RemoveAt(pos);
+
+            // Save asynchronously the list
+            SaveAsync();
+
+            return true;
+        }
+
+        GetNext(pos);
+    }
+
+    return false;
+}
+
 // CDVDPositionList
 
 CDVDPositionList::CDVDPositionList(CWinApp* pApp, LPCTSTR lpszSection, int nMaxSize)
