@@ -74,6 +74,7 @@ public:
     virtual void Empty();
 
     bool AddEntry(LPCTSTR lpszFileName);
+    bool RemoveEntry(LPCTSTR lpszFileName);
 };
 
 struct DVD_POSITION {
